--- a/style.css
+++ b/style.css
@@ -84,6 +84,92 @@ font-weight: 500;
 } */
 
 
+
+table {
+	width: 800px;
+	border-collapse: collapse;
+	overflow: hidden;
+	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+.tbl-header{
+    background-color: rgba(255,255,255,0.3);
+}
+
+.tbl-content{
+    height:300px;
+    overflow-x:auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255,255,255,0.3);
+}
+
+th{
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+td{
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 12px;
+    color: #fff;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+  
+  
+  /* demo styles */
+  
+  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+  /* body{
+    background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+    background: linear-gradient(to right, #25c481, #25b7c4);
+    font-family: 'Roboto', sans-serif;
+  } */
+  section{
+    position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+  
+  
+  
+  /* for custom scrollbar for webkit browser*/
+  
+  /* ::-webkit-scrollbar {
+      width: 6px;
+  } 
+  ::-webkit-scrollbar-track {
+     box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  } 
+  ::-webkit-scrollbar-thumb {
+      box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  } */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
 .containerTable {
 	position: absolute;
 	top: 50%;
@@ -118,7 +204,7 @@ th {
 	}
 
 
-
+ */
 
 
 
