--- a/style.css
+++ b/style.css
@@ -138,11 +138,9 @@ td{
 	transform: translate(-50%, -50%);
 }
   
-  
-  
   /* for custom scrollbar for webkit browser*/
   
-  /* ::-webkit-scrollbar {
+  ::-webkit-scrollbar {
       width: 6px;
   } 
   ::-webkit-scrollbar-track {
@@ -150,7 +148,7 @@ td{
   } 
   ::-webkit-scrollbar-thumb {
       box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  } */
+  }
 
 
 
