--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-position: center;
-    background-image: url("screenshot/bg10.png");
+    background-image: url("Screenshot/bg10.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 94.7vh;  
@@ -8,7 +8,7 @@ body{
 
 body::after{
     content: "";
-    background: url("screenshot/bg10.png");
+    background: url("Screenshot/bg10.png");
     opacity: 0.6;
     top: 0;
     left: 0;
