--- a/buttonGroup.css
+++ b/buttonGroup.css
@@ -9,7 +9,7 @@
     outline: none;
     margin: 12px 0;
     padding: 10px 21px;
-    border: 2px solid purple;
+    border: 2px solid #5f367e;
     border-radius: 10px;
     font-size: 18px;
     background: none;
@@ -17,8 +17,8 @@
 }
 
 .btn-group button{
-    background-color:#ee8bee; /* Green background */
-    border: 1px #ee8bee; /* Green border */
+    background-color:#bd77f2; /* Green background */
+    border: 1px #bd77f2; /* Green border */
     color: white; /* White text */
     padding: 10px 24px; /* Some padding */
     cursor: pointer; /* Pointer/hand icon */
@@ -27,7 +27,7 @@
 
 #roundAge{
     border-radius: 25px;
-    background-color:#ee8bee;
+    background-color:#bd77f2;
     /* width: 32.052%; */
 }
 
@@ -47,6 +47,6 @@
 
 
 .btn-group button:hover{
-    background-color: purple;
+    background-color: #5f367e;
 }
 
