--- a/table.css
+++ b/table.css
@@ -2,6 +2,7 @@
     bottom: 10%;
 } Tab is ID of section in which table resides */
 
+
 section{
     position: absolute;
 	top: 50%;
@@ -11,18 +12,14 @@ section{
 }  /*Table resides in section tag*/
   
 table {
-	width: 800px;
+	width: 900px;
 	border-collapse: collapse;
 	overflow: hidden;
 	box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
-/* .tbl-header{
-    background-color: #f5b4f5c4;
-} */
-
 .tbl-content{
-    height:300px;
+    height: 120%;
     overflow-x:auto;
     margin-top: 0px;
     border: 1px solid rgba(255,255,255,0.3);
@@ -30,22 +27,34 @@ table {
 }
 
 th{
-    padding: 14px 15px;
+    padding: 15px 15px;
     text-align: center;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 14px;
     color: #fff;
     text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #bd77f2a1;
+
+}
+
+#address{
+    width: 50%;
+}
+
+#date{
+    width: 18%;
 }
 
 td{
-    padding: 15px;
+    padding: 20px;
     text-align: left;
     vertical-align:middle;
     font-weight: 300;
     font-size: 12px;
     color: #fff;
     border-bottom: solid 1px rgba(255,255,255,0.1);
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
 /* demo styles */
