--- a/table.css
+++ b/table.css
@@ -23,6 +23,7 @@ table {
 	border-collapse: collapse;
 	overflow: hidden;
 	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    
 }
 
 .tbl-content{
@@ -41,7 +42,7 @@ th{
     color: #fff;
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #bd77f2a1;
+    background-color: #bd77f281;
     position: sticky;
     top:0%;
 }
@@ -56,6 +57,7 @@ td{
     color: #fff;
     border-bottom: solid 1px rgba(255,255,255,0.1);
     font-family: "Lucida Console", "Courier New", monospace;
+    background-color: rgba(0, 0, 0, 0.575);
 }
 
 /* demo styles */
