--- a/style.css
+++ b/style.css
@@ -36,4 +36,17 @@ body::after {
 
 #logo {
   margin-top: 0.5%;
+  width: 4.5%;
+  margin-left: 1%;
+}
+
+
+.contain{
+  color: white;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  line-height: 1.5;
 }
