--- a/slider.css
+++ b/slider.css
@@ -1,34 +1,9 @@
-/* .slidecontainer{
-  text-align: center;
-}
-
-#myRange{
-  width: 30vw;
-} */
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-/* *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-} */
-
-/* html,body{
-  display: grid;
-  height: 100%;
-  text-align: center;
-  place-items: center;
-  background: #664AFF;
-} */
-
 .range{
   height: 5vh;
   width: auto;
   background: #bd77f2;
   border-radius: 25px 25px 0 0;
-  /* padding: 0 65px 0 45px; */
-  box-shadow: 2px 4px 8px rgba(0,0,0,0.1);
   display: grid;
   text-align: center;
   place-items: center;
@@ -63,12 +38,11 @@
   height: 100%;
   width: 100%;
   background: #5f367e;
-  border: 3px solid white;
+  border: 2px solid white;
   z-index: -1;
   left: 50%;
   transform: translateX(-50%) rotate(45deg);
   border-bottom-left-radius: 50%;
-  box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
 }
@@ -83,13 +57,14 @@
 
 .field .value{
   width: 5vw;
+  color: white;
 }
  
 
 .range input{
   -webkit-appearance: none;
   width: 22vw;
-  height: 5px;
+  height: 15%;
   background: linear-gradient(to right, white 60%, white 40%);
   border-radius: 5px;
 
@@ -108,4 +83,23 @@
 .range input::-moz-range-progress{
   background: #5f367e; 
   /* this progress background is only shown on Firefox */
+}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+@media only screen and (max-width: 600px) {
+
+  .range input {
+    width: 60vw;
+}
+
+.field .value{
+  width: 19vw;
+  color: white;
+}
+
+.sliderValue{
+  position: relative;
+  width: 60vw;
+}
+
 }
