--- a/style.css
+++ b/style.css
@@ -8,19 +8,6 @@ body {
   margin: 0%;
 }
 
-body::after {
-  content: "";
-  background: url("screenshot/bg10.png");
-  opacity: 0.6;
-  margin: 0%;
-  /* top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1; */
-}
-
 #title{
     display: flex;
 }
@@ -40,13 +27,32 @@ body::after {
   margin-left: 1%;
 }
 
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
-.contain{
-  color: white;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  line-height: 1.5;
+@media only screen and (max-width: 500px) {
+
+  body {
+    background-image: url("screenshot/mobilebg.jpg");
+    background-size: cover;
+  }
+
+
+  #title{
+    margin-top: 5%;
+  }
+
+  .head_text {
+    
+    font-size: x-large;
+    
+  }
+
+  #logo {
+    margin-top: 1%;
+    width: 10%;
+    margin-left: 2%;
+  }
+  
 }
+
+
