--- a/table.css
+++ b/table.css
@@ -1,67 +1,104 @@
-#date{
-    white-space: nowrap;
-}
-
-#address{
-    text-align: left;
-}
-  
 table {
-    width: 75vw;
-	border-collapse: collapse;
-	overflow: hidden;
-	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  width:75vw;
+  height: 65vh;
+  color: white;
 }
 
-.tblContent{
-    height: 60vh;
-    overflow-y:auto;
-    margin-top: 0px;
-    border: 1px solid rgba(255,255,255,0.3);
-    /* opacity: 1; */
+thead {
+  width: 100%;
+  height: 15%;
 }
 
-
-  .tblContent thead th{
-    position: sticky;
-    top: 0;
-    padding: 22px 15px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 15px;
-    color: #fff;
-    text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #5f367e;
+tbody {
+  display:block;
+  height:100%;
+  overflow:auto;
+  
 }
 
-
-td{
-    padding:1rem;
-    text-align: center;
-    vertical-align:middle;
-    font-weight: 300;
-    font-size: 14px;
-    color: #fff;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
-    font-family: "Lucida Console", "Courier New", monospace;
-    background-color: rgba(0, 0, 0, 0.575);
+thead th{
+  padding: 1.8%;
 }
 
-/* demo styles */
+tbody td{
+  padding: 0.4%;
+}
+
+thead tr {
+  display:table;
+  width:100%;
+  table-layout:fixed;
+  text-align: center;
+  background-color: #5f367e;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+}
+
+tbody tr{
+  display:table;
+  width:100%;
+  table-layout:fixed;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.575);
+  /* font-size: medium; */
+  
+}
+
+table ,tr, th {
+  border: 1px solid rgba(255,255,255,0.3);
+}
+
+#dateBody{
+  white-space: nowrap;
+}
+
+#addressHead{
+  text-align: center;
+  width: 30%;
+}
+
+#addressBody{
+  text-align: left;
+  width: 30%;
+  padding-left: 1%;
+}
+
+/* SCROLL CSS */
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-/* body{
-  background: -webkit-linear-gradient(left, #25c481, #25b7c4);
- background: linear-gradient(to right, #25c481, #25b7c4);
- font-family: 'Roboto', sans-serif;
-} */
-
 ::-webkit-scrollbar{
-    width: 6px;
+    width: 0px;
 } 
-::-webkit-scrollbar-track{
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-} 
-::-webkit-scrollbar-thumb{
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+
+#viewCentersInMobile{
+  display: none;
+}
+
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+@media only screen and (max-width: 600px) {
+#viewCenters{
+  display: none;
+}
+
+#viewCentersInMobile{
+  display: grid;
+  text-align: center;
+  justify-content: center;
+}
+
+thead {
+  height: 5%;
+}
+
+tbody td{
+  padding: 4%;
+}
+tbody tr{
+background-color: rgba(0, 0, 0, 0.712);
+}
+
+tbody tr{
+  display: block;
+}
+
 }
