--- a/style.css
+++ b/style.css
@@ -12,19 +12,10 @@ body {
     display: flex;
 }
 
-.head_text {
-  margin: 2% 0% 2% 2%;
-  font-style: normal;
-  color: white;
-  font-size: 300%;
-  font-family: system-ui;
-  font-weight: 500;
-}
-
 #logo {
   margin-top: 0.5%;
-  width: 4.5%;
   margin-left: 1%;
+  cursor: pointer;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -36,23 +27,10 @@ body {
     background-size: cover;
   }
 
-
-  #title{
-    margin-top: 5%;
-  }
-
   .head_text {
-    
-    font-size: x-large;
-    
+    font-size: x-large;    
   }
 
-  #logo {
-    margin-top: 1%;
-    width: 10%;
-    margin-left: 2%;
-  }
-  
 }
 
 
