--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 body {
-  background-position: center;
-  background-image: url("screenshot/bg10.png");
-  background-repeat: no-repeat;
-  background-size: cover;
   height: 100vh;
   width: 100vw;
   margin: 0%;
+  overflow-x:hidden;
 }
 
 #title{
