--- a/background.css
+++ b/background.css
@@ -1,8 +1,3 @@
-*{
-    margin:0;
-    padding:0;
-}
-
 #vanta-canvas{
     width: 100%;
     height: 100vh;
@@ -11,4 +6,22 @@
 #vanta-canvas-aboutus{
     width: 100%;
     height: 100vh;
+}
+
+#learn{
+    outline: 0;
+    border-radius: 10px;
+}
+
+#infoBlock1{
+    display: grid;
+    /* margin-left: auto; */
+
+}
+
+.profilePic{
+    min-width: 200px;
+    width: 210px;
+    margin: 2%;
+    border-radius: 100%;
 }
