--- a/background.css
+++ b/background.css
@@ -1,3 +1,5 @@
+
+
 #vanta-canvas{
     width: 100%;
     height: 100vh;
@@ -5,7 +7,12 @@
 
 #vanta-canvas-aboutus{
     width: 100%;
-    height: 100vh;
+    /* height: 110vh; */
+    background-color: rgb(196, 196, 255);
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+    padding: 1%;
 }
 
 #learn{
@@ -13,10 +20,12 @@
     border-radius: 10px;
 }
 
-#infoBlock1{
+.infoBlock{
+    /* padding-top: 2%; */
     display: grid;
-    /* margin-left: auto; */
-
+    height: fit-content;
+    width: 25%;
+    margin: 0 0 0 1%;
 }
 
 .profilePic{
@@ -24,4 +33,13 @@
     width: 210px;
     margin: 2%;
     border-radius: 100%;
+}
+
+.aboutus-text{
+   background-color: blueviolet;
+   border-radius: 30px;
+   width: auto;
+   position: absolute;
+   margin: 14% 0px 0 6%;
+   width: 15%;
 }
