--- a/buttonGroup.css
+++ b/buttonGroup.css
@@ -51,13 +51,21 @@
 .btn-group button{
     padding: 1% 4%;
     margin: 0 1% 1% 1%;
-    border-radius: 2rem;
+
     font-weight: 500;
     color: white;
     background-color:#bd77f2; 
     border-color: #bd77f2;
-    cursor: pointer;
     outline: 0;
+
+  border: none;
+  /* padding: 10px 20px; */
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  /* margin: 4px 2px; */
+  cursor: pointer;
+  border-radius: 30px;
 }
 
 .btn-group button:hover {
