--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
+
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   height: 100vh;
   width: 100vw;
   margin: 0%;
   overflow-x:hidden;
-}
-
-#title{
-    display: grid;
 }
 
 #logo {
@@ -16,9 +17,8 @@ body {
 }
 
 .head_text1 {
-  margin: 2% 0% 0 3%;
   font-style: normal;
-  color: white;
+  /* color: White; */
   font-size: xx-large;
   font-family: system-ui;
   font-weight: 500;
@@ -26,11 +26,12 @@ body {
 }
 
 .head_text2{
-  margin: 0 0 2% 12%;
+  margin: 0 0 0 15%;
   opacity: 0.4;
-  color: white;
-  font-size: xx-large;
+  color:white;
+  font-size: x-large;
   font-family: Ink Free;
+  width: fit-content;
 }
 
 
