--- a/table.css
+++ b/table.css
@@ -2,6 +2,7 @@ table {
   width:75vw;
   height: 65vh;
   color: white;
+  /* border-radius: 30px; */
 }
 
 thead {
@@ -32,6 +33,8 @@ thead tr {
   background-color: #5f367e;
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
 }
 
 tbody tr{
@@ -43,7 +46,7 @@ tbody tr{
 }
 
 table ,tr, th {
-  border: 1px solid rgba(255,255,255,0.3);
+  border: 1px solid rgba(255, 255, 255, 0);
 }
 
 #dateBody{
