--- a/buttonGroup.css
+++ b/buttonGroup.css
@@ -5,7 +5,7 @@
     display: grid;
     font-weight: 500;
     border-radius:20px;
-    background-color:#bd77f2; 
+    background-color:#b8b0b5; 
     margin:0 25% 1% 25%; 
 }
 
@@ -15,8 +15,8 @@
     border-radius: 2rem;
     font-weight: 500;
     color: white;    
-    background-color:#bd77f2; 
-    border-color: #bd77f2;
+    background-color:#b8b0b5; 
+    border-color: #b8b0b5;
     /* -moz-appearance: none; */
     /* -webkit-appearance: none; */
     /* border: none; */
@@ -26,12 +26,12 @@
 }
   
 .dd:hover {
-    background-color: #5f367e;
+    background-color: #605b59;
     color: white;
 }
 
 .dd::after:hover{
-    background-color: #5f367e;
+    background-color: #605b59;
     color: white;
 }
 
@@ -54,8 +54,8 @@
 
     font-weight: 500;
     color: white;
-    background-color:#bd77f2; 
-    border-color: #bd77f2;
+    background-color:#b8b0b5; 
+    border-color: #b8b0b5;
     outline: 0;
 
   border: none;
@@ -70,15 +70,15 @@
 
 .btn-group button:hover {
     transition-duration: 0.4s;
-    background-color: #5f367e; 
+    background-color: #605b59; 
     color: white;
 }
 
 
 
 /* .btn-group button{
-    background-color:#bd77f2; 
-    border: 1px #bd77f2;
+    background-color:#b8b0b5; 
+    border: 1px #b8b0b5;
     color: white; 
     padding: 1.5% 3.886%;
     cursor: pointer;
@@ -96,10 +96,13 @@
     }
 
     .all_buttons{
-        background-color:#bd77f2; 
+        background-color:#b8b0b5; 
         margin: 5% 1% 8% 1%;
         border-radius:20px;
     }
 
+    /* .my-row{
+        margin: 0;
+    } */
     
 }
