--- a/table.css
+++ b/table.css
@@ -30,11 +30,11 @@ thead tr {
   width:100%;
   table-layout:fixed;
   text-align: center;
-  background-color: #5f367e;
+  background-color: #007cc7;
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
-  border-top-right-radius: 30px;
-  border-top-left-radius: 30px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
 }
 
 tbody tr{
