--- a/background.css
+++ b/background.css
@@ -5,9 +5,20 @@
 
 #vanta-canvas-aboutus{
     width: 100%;
-    /* height: 110vh; */
-    background-color: rgb(13, 13, 14);
+    height: 70%;
+    background-color: #2d2926ff;
     display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+    padding: 1%;
+}
+
+#vanta-canvas-aboutus-mobile{
+    /* display: flex; */
+    display: none;
+    width: 100%;
+    height: 70%;
+    background-color: #2d2926ff;
     flex-flow: wrap;
     justify-content: center;
     padding: 1%;
@@ -40,4 +51,15 @@
    position: absolute;
    margin: 14% 0px 0 6%;
    width: 15%;
+}
+
+
+@media only screen and (max-width: 727px) {
+    #vanta-canvas-aboutus{
+        display: none;
+    }
+    #vanta-canvas-aboutus-mobile{
+        display:flex;
+    }
+
 }
