--- a/slide.css
+++ b/slide.css
@@ -8,7 +8,7 @@
   /* Custom Bar */
   .range-wrap::before {
     content: "";
-    background: linear-gradient(to right, #949bb1, #ac8b78, #d3d3da);
+    background: linear-gradient(to right, #eefbfb, #007cc7, #52ab98);
     width: 100%;
     height: 8px;
     display: block;
